# Resume_Updater

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_phase1.py  test_phase2.py  test_phase2_docker.py  test_phase3.py
app/: main.py
app/data/: master_resume.json
app/models/: schema.py
app/services/: compiler.py  llm_transformer.py  renderer.py
source_resume/: _header.tex  resume.tex
source_resume/sections/: activities.tex  education.tex  experience.tex  objective.tex  skills.tex
templates/: resume_template.tex
