[project]
name = "resume-etl-pipeline"
version = "0.1.0"
description = "A production-grade, self-hosted data pipeline that dynamically compiles professional resumes using FastAPI, LaTeX, and Gemini."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "jinja2>=3.1.0",
    "google-genai>=0.1.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
